[gd_scene load_steps=10 format=2]

[ext_resource path="res://themes/BattleButtonTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/PrStart.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://models/gui/SkillMenu/SkillButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/Nodes/CleanGrid.gd" type="Script" id=4]
[ext_resource path="res://models/gui/SkillMenu/SkillMenu.gd" type="Script" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[node name="SkillMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 480.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background"]
margin_left = 48.0
margin_top = 72.0
margin_right = 144.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 2 )
text = "Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="Label" parent="Background"]
margin_left = 48.0
margin_top = 344.0
margin_right = 552.0
margin_bottom = 440.0
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "..."
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Background"]
margin_left = 248.0
margin_top = 64.0
margin_right = 552.0
margin_bottom = 312.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillGrid" type="GridContainer" parent="Background/ScrollContainer"]
margin_right = 292.0
margin_bottom = 277.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 3
script = ExtResource( 4 )

[node name="Item" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_right = 292.0

[node name="Item2" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 35.0
margin_right = 292.0
margin_bottom = 67.0

[node name="Item3" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 70.0
margin_right = 292.0
margin_bottom = 102.0

[node name="Item4" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 105.0
margin_right = 292.0
margin_bottom = 137.0

[node name="Item5" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 140.0
margin_right = 292.0
margin_bottom = 172.0

[node name="Item6" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 175.0
margin_right = 292.0
margin_bottom = 207.0

[node name="Item7" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 210.0
margin_right = 292.0
margin_bottom = 242.0

[node name="Item8" parent="Background/ScrollContainer/SkillGrid" instance=ExtResource( 3 )]
margin_top = 245.0
margin_right = 292.0
margin_bottom = 277.0

[node name="UseButton" type="Button" parent="Background"]
margin_left = 48.0
margin_top = 120.0
margin_right = 200.0
margin_bottom = 149.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
disabled = true
text = "Usar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="Background"]
margin_left = 48.0
margin_top = 158.0
margin_right = 200.0
margin_bottom = 187.0
mouse_default_cursor_shape = 2
theme = ExtResource( 1 )
text = "Salir"
